<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:text="Departure:"/>

    <EditText
        android:id="@+id/edit_text_departure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/departure"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="Destination:"/>

    <EditText
        android:id="@+id/edit_text_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/destination"
        android:inputType="text" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TableRow
            android:gravity="left">

            <TextView
                android:id="@+id/text_view_destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Select Date:"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="15dp"></TextView>

            <Button
                android:id="@+id/material_button_day_of_departure"
                android:paddingHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#3F51B5"
                android:inputType="date"
                android:onClick="openDatePicker"
                android:text="@string/pick_date" />
        </TableRow>
    </TableLayout>


    <CheckBox
        android:id="@+id/checkbox_iatacode_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="Searching with IATA-Codes" />

    <CheckBox
        android:id="@+id/checkbox_only_direct_flights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="0dp"
        android:text="@string/nonStopFlights" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/search_for_flights" />
    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="22dp"
        android:textColor="#000000"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:src="@drawable/ic_takeoff" />




</LinearLayout>