<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/text_view_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FROM:" />

        <TextView
            android:id="@+id/text_view_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_from"
            android:text="@string/departure"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/text_view_departure_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_from"
            android:layout_below="@id/text_view_departure"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/text_view_departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_from"
            android:layout_below="@id/text_view_departure_country"
            android:text="24.12.2023"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/text_view_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_departure_time"
            android:layout_marginTop="10dp"
            android:text="TO:"/>

        <TextView
            android:id="@+id/text_view_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_from"
            android:layout_below="@+id/text_view_departure_time"
            android:text="@string/destination"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/text_view_destination_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_from"
            android:layout_below="@+id/text_view_destination"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/text_view_destination_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@id/text_view_from"
            android:layout_below="@id/text_view_destination_country"
            android:text="24.12.2023"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_destination_time"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#00C308"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_airline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_destination_time"
            android:layout_marginTop="5dp"
            android:text="IATA Airline-Code: Lufthansa"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/purple_500"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/text_view_stops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_airline"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="Stopovers: 2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>